--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -17,6 +17,6 @@
         </StackLayout>
     </GridLayout>
     <GridLayout row="1" >
-        <Image [src]="fbUser.avatar" className="speaker-image" stretch="aspectFit"></Image>
+        <Image [src]="fbUser.avatar" className="user-image" stretch="aspectFit"></Image>
     </GridLayout>
 </GridLayout>
