--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -1,8 +1,36 @@
+StackLayout {
+    height: 100;
+    margin-left: 30;
+    margin-right: 30;
+    padding-bottom: 15;
+    background-color: transparent;
+  }
+
 .fb-login-button {
     background-color: #4267b2;
     border-radius: 5;
     color: white;
     text-align: center;
     width: 250;
-    padding-top: 10;
+    margin-left: 16;
+    margin-right: 16;
+    margin-bottom: 10;
+    font-size: 20;
 }
+.icon {
+    font-family: 'FontAwesome', 'fontawesome-webfont';
+    background-color: #4267b2;
+    color: white;
+    font-size: 30;
+    margin-right: 16;
+    margin-bottom: 10;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 5;
+  }
+label {
+    height: 100;
+    margin-right: 30;
+    padding-bottom: 15;    
+    background-color: transparent;
+  }
